<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/background"
    android:orientation="vertical"
    >


    <ImageView

        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_gravity="center"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:inputType="number"
        android:alpha="0.6"
        android:background="@drawable/buttom_shape"
        android:drawableStart="@drawable/ic_action_name"
        android:hint="@string/hint_user"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray" />


    <EditText
        android:layout_gravity="center"
        android:id="@+id/loginPassword"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttom_shape"
        android:alpha="0.6"
        android:drawableStart="@drawable/pass_icon"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_button"
        />

    <TextView
        android:id="@+id/loginForgotPass"
        android:layout_gravity="center"
        android:layout_width="244dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/forgotPass"
        />
    <TextView
        android:id="@+id/loginNewUser"
        android:layout_gravity="center"
        android:layout_width="244dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/newUser"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

</LinearLayout>
