<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/background"
    android:orientation="vertical"
    >

    <Spinner
        android:id="@+id/regSpinner"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"

        android:alpha="0.6"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/regEnrollment"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:alpha="0.6"
        android:background="@drawable/buttom_shape"
        android:drawableStart="@drawable/pass_icon"
        android:hint="@string/hint_enroll"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_gravity="center"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:alpha="0.6"
        android:background="@drawable/buttom_shape"
        android:drawableStart="@drawable/ic_action_name"
        android:hint="@string/hint_email"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/regPassword"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttom_shape"
        android:alpha="0.6"
        android:drawableStart="@drawable/pass_icon"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        />



    <Button
        android:id="@+id/regButton"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/register_button"
        />

    <ProgressBar
        android:id="@+id/regProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
